<resources>
    <string name="app_name">Bride2Be</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ProductListFragment_coinILS">ILS</string>

    <string name="LoginFragment_title">Login</string>
    <string name="LoginFragment_email">Email</string>
    <string name="LoginFragment_password">Password</string>
    <string name="LoginFragment_submit_button">TAKE ME IN!</string>
    <string name="LoginFragment_dont_you_have_user">Don`t you have a user?</string>
    <string name="LoginFragment_join_us_now_button">JOIN US NOW!</string>
    <string name="signUpFrg_firstNameET">First Name</string>
    <string name="signUpFrg_lastNameET">Last Name</string>
    <string name="signUpFrg_emailET">Email</string>
    <string name="signUpFrg_passwordET">Password</string>
    <string name="signUpFrg_phoneNumberET">Phone Number</string>
    <string name="signUpFrg_cityET">City</string>
    <string name="signUpFrg_submitBTN">TAKE ME IN!</string>
    <string name="SignUpFrg_title">Sign Up</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>