<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dirtyWhite"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="244dp">

        <EditText
            android:id="@+id/signUpFrg_street"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="Exact Address"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:text="@string/SignUpFrg_title"
            android:textColor="@color/grayishBlue"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signUpFrg_firstNameET"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="First Name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/signUpFrg_lastNameET"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="81dp"
            android:layout_height="23dp"
            android:text="@string/signUpFrg_firstNameET"
            android:textColor="@color/darkTurquoise"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpFrg_firstNameET" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="81dp"
            android:layout_height="23dp"
            android:gravity="center"
            android:text="Street"
            android:textColor="@color/darkTurquoise"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpFrg_street" />

        <EditText
            android:id="@+id/signUpFrg_lastNameET"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/signUpFrg_firstNameET"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpFrg_lastNameET"
            android:textColor="@color/darkTurquoise"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.821"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpFrg_lastNameET" />

        <Spinner
            android:id="@+id/signUpFrg_cityET"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:hint="City"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:text="@string/signUpFrg_cityET"
            android:textColor="@color/darkTurquoise"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/signUpFrg_submitBTN"
            app:layout_constraintStart_toStartOf="@+id/signUpFrg_submitBTN"
            app:layout_constraintTop_toBottomOf="@+id/signUpFrg_cityET" />

        <EditText
            android:id="@+id/signUpFrg_phoneNumberET"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpFrg_phoneNumberET"
            android:textColor="@color/darkTurquoise"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/signUpFrg_phoneNumberET" />

        <EditText
            android:id="@+id/signUpFrg_emailET"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/signUpFrg_emailET"
            android:textColor="@color/darkTurquoise"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/signUpFrg_emailET" />

        <EditText
            android:id="@+id/signUpFrg_passwordET"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.548"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUpFrg_passwordET"
            android:textColor="@color/darkTurquoise"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/signUpFrg_passwordET" />

        <Button
            android:id="@+id/signUpFrg_submitBTN"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:onClick="onClickSubmitButton"
            android:text="@string/LoginFragment_submit_button"
            android:textSize="20sp"
            app:backgroundTint="@color/darkTurquoise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>